# RAG-FAQ-Support-Bot

./: .gitignore  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/routes/: api.py
src/services/: rag_service.py
static/: index.html  script.js  styles.css
